# challenge1-sr-devops-data-eng

./: .gitignore  FINAL_DELIVERABLE.md  IAM_NOTES.md  Jenkinsfile  OBSERVABILITY_NOTES.md  README-challenge1-sr-devops-data-eng.md  README.md  docker-compose.yml
etl-java-project/: README.md  pom.xml
etl-java-project/src/main/java/com/sandbox/: App.java
etl-python-project/: README.md  etl_job.py  pyproject.toml
etl-python-project/data/: input.csv  output.csv
etl-python-project/tests/: test_etl_job.py
gitea/: init_repo.sh
jenkins/: Dockerfile
observability/prometheus/: prometheus.yml
terraform-infra/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
