
[tool.poetry]
name = "etl-python-project"
version = "0.1.0"
description = "Sample ETL project using Python and Poetry"
authors = ["Candidate <candidate@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0"
boto3 = "^1.26"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
